# autoxrandr

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: cli.rs  db.rs  err_print.rs  main.rs  state.rs  xrandr.rs
