[package]
name = "autoxrandr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
clap = { version = "4.4.10", features = ["derive"] }
fork = "0.1.22"
proc-lock = "0.4.0"
rusqlite = { version = "0.30.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shlex = "1.2.0"
x11rb = { version = "0.12.0", features = ["randr", "screensaver"] }
